# logbook

./: .gitignore  CLAUDE.md  Dockerfile  GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_fts_search.py  003_add_motivation_rationale.py  004_add_goals_indexes.py  005_add_task_notes.py
src/logbook/: config.py  database.py  main.py  mcp_server.py  models.py  schemas.py
src/logbook/cli/: main.py
src/logbook/routers/: goals.py  projects.py  search.py  summary.py  tasks.py  worklog.py
src/logbook/services/: export.py  goals.py  projects.py  search.py  summary.py  tasks.py  worklog.py
src/logbook/static/: app.js  index.html  style.css
tests/: conftest.py  test_goals.py  test_projects.py  test_search.py  test_summary.py  test_tasks.py  test_worklog.py
